[package]
name = 'basic-pow'
version = "3.0.0"
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'A Substrate node that demonstrates minimal proof of work consensus'
license = "GPL-3.0-or-later"

[[bin]]
name = 'basic-pow'
path = 'src/main.rs'

[dependencies]
futures = '0.3.4'
log = '0.4.8'
rand = { version = "0.7.2", features = ["small_rng"] }
sha3 = "0.8.0"
structopt = '0.3.8'

# Substrate packages
sc-basic-authorship = '0.9'
sc-cli = '0.9'
sc-client-api = '3.0'
sc-consensus = '0.9'
sc-consensus-pow = '0.9'
sc-executor = '0.9'
sc-network = '0.9'
sc-service = '0.9'
sc-transaction-pool = '3.0'
sp-api = '3.0'
sp-blockchain = '3.0'
sp-consensus = '0.9'
sp-core = '3.0'
sp-inherents = '3.0'
sp-runtime = '3.0'
sp-timestamp = '3.0'
sp-transaction-pool = '3.0'

# local packages
sha3pow = { path = '../../consensus/sha3pow' }

# This node is compatible with any of the runtimes below
# ---
# Common runtime configured with most Recipes pallets.
runtime = { package = "super-runtime", path = "../../runtimes/super-runtime" }

# Runtime with custom weight and fee calculation.
# runtime = { package = "weight-fee-runtime", path = "../../runtimes/weight-fee-runtime"}

# Runtime with custom runtime-api (custom API only used in rpc-node)
# runtime = { package = "api-runtime", path = "../../runtimes/api-runtime" }
# ---

[build-dependencies]
substrate-build-script-utils = '3.0'
vergen = '3.1.0'
