[package]
name = "frameless-node"
version = "2.0.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "frameless-node"
path = "src/main.rs"

[dependencies]
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sp-io = { version = '2.0.0-alpha.5' }
sc-cli = { version = '0.8.0-alpha.5' }
sp-core = { version = '2.0.0-alpha.5' }
sc-executor = { version = '0.8.0-alpha.5' }
sc-service = { version = '0.8.0-alpha.5' }
sp-inherents = { version = '2.0.0-alpha.5' }
sc-transaction-pool = { version = '2.0.0-alpha.5' }
sp-transaction-pool = { version = '2.0.0-alpha.5' }
sc-network = { version = '0.8.0-alpha.5' }
sc-consensus-aura = { version = '0.8.0-alpha.5' }
sp-consensus-aura = { version = '0.8.0-alpha.5' }
sp-consensus = { version = '0.8.0-alpha.5' }
grandpa = { version = "0.8.0-alpha.5", package = "sc-finality-grandpa" }
grandpa-primitives = { version = "2.0.0-alpha.5", package = "sp-finality-grandpa" }
sc-client = { version = '0.8.0-alpha.5' }
runtime = { package = 'frameless-runtime', path = '../../runtimes/frameless-runtime' }
sp-runtime = { version = '2.0.0-alpha.5' }
sc-basic-authorship = { version = "0.8.0-alpha.5" }

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { version = "2.0.0", package = "substrate-build-script-utils", git = 'https://github.com/paritytech/substrate.git', rev = '3e651110aa06aa835790df63410a29676243fc54' }
