[package]
name = "hybrid-consensus"
version = "2.0.0-rc6"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'A Substrate node with PoW authoring and PoA finality'
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
	"Node",
	"PoW",
	"GRANDPA",
	"Hybrid-consensus",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-rc6"

[[bin]]
name = "hybrid-consensus"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
futures = "0.3.1"
structopt = "0.3.8"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.2.0"
parking_lot = "0.9.0"
trie-root = "0.15.2"
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-executor = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-service = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-network = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-consensus-pow = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-consensus-pow = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sha3pow = { path = '../../consensus/sha3pow' }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }

runtime = { package = "minimal-grandpa-runtime", path = "../../runtimes/minimal-grandpa-runtime"}


[build-dependencies]
vergen = "3.0.4"
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
