[package]
name = "hybrid-consensus"
version = "3.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'A Substrate node with PoW authoring and PoA finality'
license = "GPL-3.0-or-later"

[[bin]]
name = "hybrid-consensus"
path = "src/main.rs"

[dependencies]
ctrlc = { version = "3.1.3", features = ["termination"] }
derive_more = "0.15.0"
exit-future = "0.2.0"
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
log = "0.4.8"
parking_lot = "0.9.0"
structopt = "0.3.8"
tokio = "0.1.22"
trie-root = "0.15.2"

# Substrate packages
sc-basic-authorship = '0.9'
sc-cli = '0.9'
sc-client-api = '3.0'
sc-consensus = '0.9'
sc-consensus-pow = '0.9'
sc-executor = '0.9'
sc-finality-grandpa = '0.9'
sc-network = '0.9'
sc-service = '0.9'
sc-transaction-pool = '3.0'
sp-api = '3.0'
sp-consensus = '0.9'
sp-consensus-pow = '0.9'
sp-core = '3.0'
sp-finality-grandpa = '3.0'
sp-inherents = '3.0'
sp-io = '3.0'
sp-runtime = '3.0'
sp-timestamp = '3.0'
sp-transaction-pool = '3.0'

# local packages
runtime = { package = "minimal-grandpa-runtime", path = "../../runtimes/minimal-grandpa-runtime"}
sha3pow = { path = '../../consensus/sha3pow' }

[build-dependencies]
substrate-build-script-utils = '3.0'
vergen = "3.0.4"
