[package]
name = "kitchen-node"
version = "2.0.0-alpha.6"
edition = "2018"
authors = ['Joshy Orndorff', '4meta5', 'Jimmy Chu']
homepage = 'https://substrate.dev/recipes'
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'A Substrate node that houses many recipe pallets'

[[bin]]
name = "kitchen-node"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
futures = "0.3.1"
structopt = "0.3.8"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.2.0"
parking_lot = "0.9.0"
trie-root = "0.15.2"
sp-io = '2.0.0-alpha.6'
sc-cli = '0.8.0-alpha.6'
sc-client-api = '2.0.0-alpha.6'
sp-core = '2.0.0-alpha.6'
sp-runtime = '2.0.0-alpha.6'
sc-executor = '0.8.0-alpha.6'
sc-service = '0.8.0-alpha.6'
sp-inherents = '2.0.0-alpha.6'
sc-transaction-pool = '2.0.0-alpha.6'
sp-transaction-pool = '2.0.0-alpha.6'
sc-network = '0.8.0-alpha.6'
sc-consensus-babe = '0.8.0-alpha.6'
sp-consensus-babe = '0.8.0-alpha.6'
sc-finality-grandpa = '0.8.0-alpha.6'
sp-finality-grandpa = '2.0.0-alpha.6'
sc-client = '0.8.0-alpha.6'
sc-basic-authorship = '0.8.0-alpha.6'
sp-consensus = '0.8.0-alpha.6'

# Pick one of the runtimes below.
# Your runtime must have the necessary pallets to support consensus (Babe, Grandpa, etc).
# ---
# Common runtime configured with most Recipes pallets.
runtime = { package = "super-runtime", path = "../../runtimes/super-runtime" }

# Runtime with custom weight and fee calculation.
# runtime = { package = "weight-fee-runtime", path = "../../runtimes/weight-fee-runtime"}

# Runtime with off-chain worker enabled.
# To use this runtime, compile kitchen-node with `ocw` feature enabled,
#   `cargo build --release --features ocw`.
# runtime = { package = "ocw-runtime", path = "../../runtimes/ocw-runtime" }

# TODO Can't use this until the API runtime implements babe api
# runtime = { package = "api-runtime", path = "../../runtimes/api-runtime" }
# ---

[build-dependencies]
vergen = "3.0.4"
substrate-build-script-utils = '2.0.0-alpha.6'

[features]
ocw = []
