[package]
name = "kitchen-node"
version = "3.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'An instant-sealing Substrate node. Can be used with most recipe runtimes.'
license = "GPL-3.0-or-later"

[[bin]]
name = "kitchen-node"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
futures = "0.3.1"
structopt = "0.3.8"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.2.0"
parking_lot = "0.9.0"
trie-root = "0.15.2"

# Substrate packages
sc-basic-authorship = '0.9'
sc-cli = '0.9'
sc-client-api = '3.0'
sc-consensus = '0.9'
sc-consensus-manual-seal = '0.9'
sc-executor = '0.9'
sc-network = '0.9'
sc-service = '0.9'
sc-transaction-pool = '3.0'
sp-api = '3.0'
sp-consensus = '0.9'
sp-core = '3.0'
sp-inherents = '3.0'
sp-io = '3.0'
sp-keystore = '0.9'
sp-runtime = '3.0'
sp-timestamp = '3.0'
sp-transaction-pool = '3.0'

# local packages

# This node is compatible with any of the runtimes below
# ---
# Common runtime configured with most Recipes pallets.
runtime = { package = "super-runtime", path = "../../runtimes/super-runtime" }

# Runtime with custom weight and fee calculation.
# runtime = { package = "weight-fee-runtime", path = "../../runtimes/weight-fee-runtime"}

# Runtime with off-chain worker enabled.
# To use this runtime, compile the node with `ocw` feature enabled,
#   `cargo build --release --features ocw`.
# runtime = { package = "ocw-runtime", path = "../../runtimes/ocw-runtime" }

# Runtime with custom runtime-api (custom API only used in rpc-node)
# runtime = { package = "api-runtime", path = "../../runtimes/api-runtime" }
# ---

[build-dependencies]
substrate-build-script-utils = '3.0'
vergen = "3.0.4"

[features]
ocw = []
