[package]
name = 'manual-seal'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
edition = '2018'
repository = 'https://github.com/paritytech/substrate/'
version = "2.0.0-dev"
description = "A Substrate-based node that uses the instant-seal and manual-seal consensus engines"
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
	"Node",
	"Manual Seal",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-dev"

[[bin]]
name = 'manual-seal'
path = 'src/main.rs'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
structopt = '0.3.8'
parity-scale-codec = '1.3.0'
sha3 = "0.8"
rand = { version = "0.7", features = ["small_rng"] }
jsonrpc-core = "14.0.5"

sc-consensus = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sc-consensus-manual-seal = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sc-rpc = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sc-client-api = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sp-blockchain =  { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sp-timestamp = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sc-basic-authorship = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sc-cli = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sc-executor = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sc-network = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sc-service = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sc-transaction-pool = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sp-consensus = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sp-core = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sp-inherents = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sp-runtime = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
sp-transaction-pool = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }

# This node is compatible with any of the runtimes below
# ---
# Common runtime configured with most Recipes pallets.
# runtime = { package = "super-runtime", path = "../../runtimes/super-runtime" }

# runtime = { package = "pow-runtime", path = "../../runtimes/pow-runtime" }

# Runtime with custom weight and fee calculation.
# runtime = { package = "weight-fee-runtime", path = "../../runtimes/weight-fee-runtime"}

# Runtime with custom runtime-api (custom API only used in rpc-node)
# runtime = { package = "api-runtime", path = "../../runtimes/api-runtime" }

# Runtime that does not use FRAME
runtime = { package = "frameless-runtime", path = "../../runtimes/frameless-runtime" }
# ---

[build-dependencies]
vergen = '3.0.4'
substrate-build-script-utils = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '34695a85650b58bcd7d7e2a677cafc2921251d68' }
