[package]
name = "adding-machine"
version = "2.0.0-alpha.1"
authors = ["4meta5, Joshy Orndorff"]
edition = "2018"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'system/std',
    'sp-runtime/std',
]

[dependencies]
parity-scale-codec = { version = "1.1.0", features = ["derive"], default-features = false }
frame-support = { package = "frame-support", rev = '7c751574d8c53108e78440bfa5dffb80ab644972', git = "https://github.com/paritytech/substrate.git", default_features = false }
system = { package = "frame-system", rev = '7c751574d8c53108e78440bfa5dffb80ab644972', git = "https://github.com/paritytech/substrate.git", default_features = false }
sp-runtime = { rev = '7c751574d8c53108e78440bfa5dffb80ab644972', git = "https://github.com/paritytech/substrate.git", default_features = false }

[dev-dependencies]
sp-core = { rev = '7c751574d8c53108e78440bfa5dffb80ab644972', git = "https://github.com/paritytech/substrate.git", default_features = false }
sp-io = { rev = '7c751574d8c53108e78440bfa5dffb80ab644972', git = "https://github.com/paritytech/substrate.git", default_features = false }
