[package]
name = "basic-token"
version = "2.0.0-rc3"
authors = ["4meta5"]
repository = 'https://github.com/substrate-developer-hub/recipes'
edition = "2018"
license = "GPL-3.0-or-later"
description = "A Pallet that implements a basic account-based cryptocurrency"

[package.metadata.substrate]
categories = [
	"Pallet",
	"Token",
	"Accounts",
	"Assets",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-rc3"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
]

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
frame-support = { version = '2.0.0-rc3', default-features = false }
frame-system = { version = '2.0.0-rc3', default-features = false }

[dev-dependencies]
sp-core = { version = '2.0.0-rc3', default-features = false }
sp-io = { version = '2.0.0-rc3', default-features = false }
sp-runtime = { version = '2.0.0-rc3', default-features = false }
