[package]
name = "charity"
version = "2.0.0-rc6"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
edition = "2018"
license = "GPL-3.0-or-later"
description = "A charitable organization that accepts donations and imbalances"

[package.metadata.substrate]
categories = [
	"pallet",
	"Assets",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-rc6"

[features]
default = ['std']
std = [
	'parity-scale-codec/std',
	'frame-support/std',
	'frame-system/std',
	'balances/std',
	'sp-runtime/std',
]

[dependencies]
serde = "1.0.102"
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
frame-support = { version = '2.0.0-rc6', default-features = false }
frame-system = { version = '2.0.0-rc6', default-features = false }
balances = { package = 'pallet-balances', version = '2.0.0-rc6', default-features = false }
sp-runtime = { version = '2.0.0-rc6', default-features = false }
sp-std = { version = '2.0.0-rc6', default-features = false }

[dev-dependencies]
sp-core = { version = '2.0.0-rc6', default-features = false }
sp-io = { version = '2.0.0-rc6', default-features = false }
